Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-132602

[REG 6.8 -> 6.9]Crash when invoking `destroy` on self

XMLWordPrintable

    • 7d510cfc0 (dev), 816b43c18 (6.9)

      Please click the button. After one second, this crashes on 6.9.0 beta1. Does not crash on 6.8.1.

      I suppose qmlsc only kicks in with 6.9.0 here?

      Workaround is to delay the destroy call via Qt.callLater.

      import QtQuick
      import QtQuick.Controls
      
      Window {
        id: root
      
        width: 640
        height: 480
        visible: true
        title: qsTr("Hello World")
      
        Button {
          text: "Click me"
          onClicked: singleShot.createObject(root)
        }
      
        Component {
          id: singleShot
          Timer {
            id: lockTimer
            interval: 1000
            running: true
            onTriggered: lockTimer.destroy()
          }
        }
      }
      

        1. QTBUG-132602.tgz
          4 kB
          Nils Jeisecke
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            ulherman Ulf Hermann
            njeisecke_qtc Nils Jeisecke
            Votes:
            0 Vote for this issue
            Watchers:
            9 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes