QtQml: Fix AOT compiled context for destroy() and toString() methods

Those are not mapped to regular QMetaMethods but rather come with
special method indices and need to be resolved separately.

Amends commit a741271dd58b21728928684f1ef1efaa91e79ebf

This exposes that the override order between JavaScript extensions and
their base types was wrong. JavaScript extensions do certainly not
override their base types. Fix this, too.

We also need to always specialize the lookups for these calls. It
doesn't actually matter if there is propertyData or not since we branch
off into the special cases anyway when calling them.

Pick-to: 6.9
Fixes: QTBUG-132602
Change-Id: Iea83ce94459b0d0a3bf54731898fd62b9ad46c46
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>